--- a/cplus_prog/1hello_world.html
+++ b/cplus_prog/1hello_world.html
@@ -38,7 +38,7 @@
 	<div class="base">
 		<div class="box">
 			<p>Source code</p>
-			<div class="input"><img src="../simple_prog/1hello_inp.PNG" class="img"></div>
+			<div class="input"><img src="../simple_prog/1hello_inp.png" class="img"></div>
 			<p>Output</p>
 			<div class="Output">Hello World</div>
 		</div>
