--- a/cplus.html
+++ b/cplus.html
@@ -59,8 +59,8 @@
 
 				<div class="content" id="if_elCon">
 					<p>The if...else statement is used to execute a block of code among two alternatives. Use the " if " statement to specify a block of C++ code to be executed if a condition is true.</p><br>
-					<pre>There are three forms of if...else statements in C++.
-1. if statement
+					<p>There are three forms of if...else statements in C++.</p>
+<pre>1. if statement
 2. if...else statement
 3. if...else if...else statement</pre>
 				</div>
