--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="front">
         <div class="box fadeinup">
           <div class="text">HEY! I AM</div>
-          <a href="#about"><h1 style="color: black;">Pawan Kumar Gupta</h1></a>
+          <a href="#about"><h1 style="color: black;" class="font">Pawan Kumar Gupta</h1></a>
           <div class="wrapper">
             <div class="static-txt">I'm  a</div>
             <ul class="dynamic-txts">
