--- a/cplus.html
+++ b/cplus.html
@@ -482,44 +482,23 @@
 				</div>
 
 				<div class="pattern hide small-txt">
-					<ul>
-						<li><a href="cplus_prog/34starPat1.html"><div class="number">1</div>
+					<div class="left_part">
+						<ul>
+							<li><a href="cplus_prog/34starPat1.html"><div class="number">1</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div><b>*<br>* *<br>* * *<br>* * * *<br>* * * * *</b></span></a>
-						</li>
-						<li><a href="cplus_prog/35numPat2.html"><div class="number">2</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1<br>1 2 <br> 1 2 3<br> 1 2 3 4<br> 1 2 3 4 5</span></a>
 						</li>
 						<li><a href="cplus_prog/36alphaPat3.html"><div class="number">3</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>A<br> A B<br> A B C<br> A B C D<br> A B C D E</span></a>
 						</li>
-						<li><a href="cplus_prog/37numPat4.html"><div class="number">4</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1<br>2 3<br> 3 4 5<br> 4 5 6 7<br> 5 6 7 8 9</span></a>
-						</li>
 						<li><a href="cplus_prog/38starPat5.html"><div class="number">5</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>* * * * *<br>* * * *<br>* * * <br> * *<br>*</span></a>
-						</li>
-						<li><a href="cplus_prog/39numPat6.html"><div class="number">6</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1 2 3 4 5<br> 1 2 3 4<br> 1 2 3<br> 1 2<br>1</span></a>
 						</li>
 						<li><a href="cplus_prog/40alphaPat7.html"><div class="number">7</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>A B C D E<br>A B C D<br>A B C<br>A B<br>A</span></a>
 						</li>
-						<li><a href="cplus_prog/41numPat8"><div class="number">8</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1 2 3 4 5<br>2 3 4 5<br>3 4 5<br> 4 5<br>5</span></a>
-						</li>
 						<li><a href="cplus_prog/42rightStar9.html"><div class="number">9</div>
 							<span style="padding-left: 10px;">WAP to print pattern
 								<pre>        *</pre><pre>      * *</pre><pre>    * * *</pre><pre>  * * * *</pre><pre>* * * * *</pre></span></a>
-						</li>
-
-
-						<li><a href="cplus_prog/43rightPat10.html"><div class="number">10</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-								<pre>            1</pre>
-								<pre>         1 2</pre>
-								<pre>      1 2 3</pre>
-								<pre>   1 2 3 4</pre>
-								<pre>1 2 3 4 5</pre></span></a></span></a>
 						</li>
 						<li><a href="cplus_prog/44rightAlpha11.html"><div class="number">11</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
@@ -529,14 +508,6 @@
 								<pre>   A B C D</pre>
 								<pre>A B C D E</pre></span></a>
 						</li>
-						<li><a href="cplus_prog/45rightNum12.html"><div class="number">12</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							  <pre>            1</pre>
-								<pre>         2 3</pre>
-								<pre>      3 4 5</pre>
-								<pre>   4 5 6 7</pre>
-								<pre>5 6 7 8 9</pre></span></a>
-						</li>
 						<li><a href="cplus_prog/46rightPat13.html"><div class="number">13</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
 								<pre>& & & & &</pre>
@@ -544,14 +515,6 @@
 								<pre>       & & &</pre>
 								<pre>          & &</pre>
 								<pre>              &</pre></span></a>
-						</li>
-						<li><a href="cplus_prog/47invertedNum14.html"><div class="number">14</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							  <pre>1 2 3 4 5</pre>
-								<pre>   1 2 3 4</pre>
-								<pre>      1 2 3</pre>
-								<pre>         1 2</pre>
-								<pre>            1</pre></span></a>
 						</li>
 						<li><a href="cplus_prog/48alphaPat15.html"><div class="number">15</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
@@ -561,15 +524,6 @@
 								<pre>           A B</pre>
 								<pre>              A</pre></span></a>
 						</li>
-			
-						<li><a href="cplus_prog/49rtInvertedNum16.html"><div class="number">16</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>1 2 3 4 5</pre>
-								<pre>   2 3 4 5</pre>
-								<pre>      3 4 5</pre>
-								<pre>         4 5</pre>
-								<pre>            5</pre></span></a>
-						</li>
 						<li><a href="cplus_prog/50starPyramid17.html"><div class="number">17</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
 							<pre>      &      </pre>
@@ -577,15 +531,6 @@
 							<pre>    & & &  </pre>
 							<pre>   & & & & </pre>
 							<pre>  & & & & &</pre></span></a>
-						</li>
-						<li><a href="cplus_prog/51invertedPyramid18.html"><div class="number">18</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>  & & & & &</pre>
-							<pre>   & & & & </pre>
-							<pre>    & & &  </pre>
-							<pre>     & &  </pre>
-							<pre>       &      </pre>
-						  </span></a>
 						</li>
 						<li><a href="cplus_prog/52starPyramid19.html"><div class="number">19</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
@@ -595,14 +540,6 @@
 							<pre>  & & & & & & </pre>
 							<pre>& & & & & & &</pre></span></a>
 						</li>
-						<li><a href="cplus_prog/53invertedPyramid20.html"><div class="number">20</div>
-							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-								<pre>& & & & & & &</pre>
-								<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre>
-							</span></a></li>
 						<li><a href="cplus_prog/54diamondPat21.html"><div class="number">21</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
 							<pre>            &      </pre>
@@ -616,7 +553,72 @@
 								<pre>            &      </pre>
 						</span></a>
 						</li>
-
+						</ul>
+					</div>
+					<div class="right_part">
+						<ul>
+							<li><a href="cplus_prog/35numPat2.html"><div class="number">2</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1<br>1 2 <br> 1 2 3<br> 1 2 3 4<br> 1 2 3 4 5</span></a>
+						</li>
+						<li><a href="cplus_prog/37numPat4.html"><div class="number">4</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1<br>2 3<br> 3 4 5<br> 4 5 6 7<br> 5 6 7 8 9</span></a>
+						</li>
+						<li><a href="cplus_prog/39numPat6.html"><div class="number">6</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1 2 3 4 5<br> 1 2 3 4<br> 1 2 3<br> 1 2<br>1</span></a>
+						</li>
+						<li><a href="cplus_prog/41numPat8"><div class="number">8</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1 2 3 4 5<br>2 3 4 5<br>3 4 5<br> 4 5<br>5</span></a>
+						</li>
+						<li><a href="cplus_prog/43rightPat10.html"><div class="number">10</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+								<pre>            1</pre>
+								<pre>         1 2</pre>
+								<pre>      1 2 3</pre>
+								<pre>   1 2 3 4</pre>
+								<pre>1 2 3 4 5</pre></span></a></span></a>
+						</li>
+						<li><a href="cplus_prog/45rightNum12.html"><div class="number">12</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+							  <pre>            1</pre>
+								<pre>         2 3</pre>
+								<pre>      3 4 5</pre>
+								<pre>   4 5 6 7</pre>
+								<pre>5 6 7 8 9</pre></span></a>
+						</li>
+						<li><a href="cplus_prog/47invertedNum14.html"><div class="number">14</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+							  <pre>1 2 3 4 5</pre>
+								<pre>   1 2 3 4</pre>
+								<pre>      1 2 3</pre>
+								<pre>         1 2</pre>
+								<pre>            1</pre></span></a>
+						</li>
+						<li><a href="cplus_prog/49rtInvertedNum16.html"><div class="number">16</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+							<pre>1 2 3 4 5</pre>
+								<pre>   2 3 4 5</pre>
+								<pre>      3 4 5</pre>
+								<pre>         4 5</pre>
+								<pre>            5</pre></span></a>
+						</li>
+						<li><a href="cplus_prog/51invertedPyramid18.html"><div class="number">18</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+							<pre>  & & & & &</pre>
+							<pre>   & & & & </pre>
+							<pre>    & & &  </pre>
+							<pre>     & &  </pre>
+							<pre>       &      </pre>
+						  </span></a>
+						</li>
+						<li><a href="cplus_prog/53invertedPyramid20.html"><div class="number">20</div>
+							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
+								<pre>& & & & & & &</pre>
+								<pre>  & & & & & & </pre>
+								<pre>    & & & & &  </pre>
+								<pre>        & & &    </pre>
+								<pre>            &      </pre>
+							</span></a>
+						</li>
 						<li><a href="#"><div class="number">22</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
 							<pre>& & & & & & & & &</pre>
@@ -630,7 +632,9 @@
 							<pre>& & & & & & & & &</pre>
 						</span></a>
 						</li>
-					</ul>
+						</ul>
+					</div>
+					
 				</div>
 				<div class="array hide small-txt">
 					<div class="theory">
