--- a/cplus.html
+++ b/cplus.html
@@ -13,8 +13,8 @@
 <body>
 <section>
 	<div class="container">
-		<div class="small-part" id="side">
-			<div class="fix">
+		<div class="small-part fix" id="side">
+			<div>
 				<div class="close" onclick="closeNav()">&times</div>
 				<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
 				<ul id="myMenu">
