search menu updated

--- a/cplus.html
+++ b/cplus.html
@@ -44,7 +44,7 @@
           			<i class="fa fa-bars"></i>
       			</button>
 				<h1> C++ Examples</h1>
-				<input type="text" id="all-search" onkeyup="allprogram()" placeholder="Search.." title="Type in a category">
+				<input type="text" id="all-search" onkeyup="addClass()" placeholder="Search.." title="Type in a category">
 			</div><br>
 			<div class="c-text">
 				<div class="c-image"><img src="c1.jpg" class="img"></div>
@@ -171,7 +171,7 @@
 			<div class="prog-container">
 
 				<div class="all">
-					<ul id="myProgram">
+					<ul id="myProgram" class="Searching">
 						<li><a href="cplus_prog/1hello_world.html"><div class="number">1</div><span>C++ Program to Print "Hello World!"</span></a></li>
 						<li><a href="cplus_prog/2print_name.html"><div class="number">2</div><span>C++ Program to Print Name entered by user.</span></a></li>
 						<li><a href="cplus_prog/3sum_two.html"><div class="number">3</div><span>C++ Program to Print Sum of two Numbers.</span></a></li>
@@ -410,7 +410,7 @@
 				</div>
 
 				<div class="simple hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="cplus_prog/1hello_world.html"><div class="number">1</div><span>C++ Program to Print "Hello World!"</span></a></li>
 						<li><a href="cplus_prog/2print_name.html"><div class="number">2</div><span>C++ Program to Print Name entered by user.</span></a></li>
 						<li><a href="cplus_prog/3sum_two.html"><div class="number">3</div><span>C++ Program to Print Sum of two Numbers.</span></a></li>
@@ -443,7 +443,7 @@
 						<h2>3. C++ if...else...else if statement</h2>
 						<p>If we need to make a choice between more than two alternatives, we use the if...else if...else statement.</p>
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="cplus_prog/12age.html"><div class="number">1</div><span>WAP to find the maximum age of two students.</span></a></li>
 						<li><a href="cplus_prog/13largeTwo.html"><div class="number">2</div><span>WAP to find the largest number among two numbers.</span></a></li>
 						<li><a href="cplus_prog/14largeThree.html"><div class="number">3</div><span>WAP to find the largest number among three numbers.</span></a></li>
@@ -454,7 +454,7 @@
 				</div>
 
 				<div class="switch hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="cplus_prog/18calc.html"><div class="number">1</div><span>WAP to make simple calculation for all arithmetic operations (+, -, *, /)</span></a></li>
 						<li><a href="cplus_prog/19vowelSwitch.html"><div class="number">2</div><span>WAP to check whether the entered character is a vowel or consonant using switch-case.</span></a></li>
 						<li><a href="cplus_prog/20day.html"><div class="number">3</div><span>WAP to display day of week as user choice.</span></a></li>
@@ -462,7 +462,7 @@
 				</div>
 
 				<div class="loop hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="cplus_prog/21helloWorld.html"><div class="number">1</div><span>WAP to print Hello World five times.</span></a></li>
 						<li><a href="cplus_prog/22number.html"><div class="number">2</div><span>WAP to print natural numbers (1 to 10).</span></a></li>
 						<li><a href="cplus_prog/23revNatural.html"><div class="number">3</div><span>WAP to print natural numbers in reverse order (10 to 1).</span></a></li>
@@ -483,7 +483,7 @@
 
 				<div class="pattern hide small-txt">
 					<div class="left_part">
-						<ul>
+						<ul class="Searching">
 							<li><a href="cplus_prog/34starPat1.html"><div class="number">1</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div><b>*<br>* *<br>* * *<br>* * * *<br>* * * * *</b></span></a>
 						</li>
@@ -556,7 +556,7 @@
 						</ul>
 					</div>
 					<div class="right_part">
-						<ul>
+						<ul class="Searching">
 							<li><a href="cplus_prog/35numPat2.html"><div class="number">2</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>1<br>1 2 <br> 1 2 3<br> 1 2 3 4<br> 1 2 3 4 5</span></a>
 						</li>
@@ -650,7 +650,7 @@
 
 							<li>Deleting − helps in deleting the element in an array</li>
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the array.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to input number from user and display in an array.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to sum n different numbers by array (find total marks secured by students in all subjects).</span></a></li>
@@ -664,7 +664,7 @@
 				</div>
 
 				<div class="func hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP for sum of two numbers using function.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to build a calculator using functions.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to find the largest element in a given array using function.</span></a></li>
@@ -686,14 +686,14 @@
 					<div class="theory">
 						<p>The key difference between structure and union lies in their memory allocation. While structures allocate individual memory space for each member, unions share the same memory space for all members, resulting in a size determined by the largest member.</p>
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to display records of students using Structure.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to display records of students using the Union.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to display records of five students using Structure.</span></a></li>
 					</ul>
 				</div>
 				<div class="class-obj hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of scope resolution operators.</span></a></li>
@@ -704,7 +704,7 @@
 						<p>A class constructor is a special member function of a class that is executed whenever we create new objects of that class.</p><br>	
 					<p>A destructor is a special member function of a class that is executed whenever an object of it's class goes out of scope.</p>
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to display the concept of constructor & destructor.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to Constructor overloading.</span></a></li>
 					</ul>
@@ -722,7 +722,7 @@
 						<li>Hybrid inheritance</li>
 
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the single inheritance.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to demonstrate the multilevel inheritance.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the multiple inheritance.</span></a></li>
@@ -755,7 +755,7 @@
 						<h4>B. Virtual Function</h4>
 						<p>A virtual function is a member function that is declared in the base class using the keyword virtual and is re-defined (Overridden) in the derived class.</p>
 					</div>
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
@@ -764,18 +764,18 @@
 					</ul>
 				</div>
 				<div class="stack hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of Stack.</span></a></li>
 					</ul>
 				</div>
 
 				<div class="queue hide small-txt">
-					<ul>
+					<ul class="Searching">
 						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of Queue.</span></a></li>
 					</ul>
 				</div>
 				<div class="linked-list hide small-txt">
-					<ul>
+					<ul class="Searching">
 							<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of Linked List.</span></a></li>
 					</ul>
 				</div>
