--- a/cplus.html
+++ b/cplus.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="cplus.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script type="text/javascript" src="cplus.js"></script>
+	<!-- <script type="text/javascript" src="cplus.js"></script> -->
 </head>
 <body>
 <section>
@@ -16,7 +16,7 @@
 		<div class="small-part fix" id="side">
 			<div>
 				<div class="close" onclick="closeNav()">&times</div>
-				<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+				<input type="search" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
 				<ul id="myMenu">
 				  <li id="all" class="programs tablinks" data-show=".all" onclick="openContent(event,'allCon')"><a href="#">All Examples</a></li>
 				  <li id="simple-prog" class="programs tablinks" data-show=".simple" onclick="openContent(event,'sim_progCon')"><a href="#">Simple Programs</a></li>
@@ -44,7 +44,7 @@
           			<i class="fa fa-bars"></i>
       			</button>
 				<h1> C++ Examples</h1>
-				<input type="text" id="all-search" onkeyup="addClass()" placeholder="Search.." title="Type in a category">
+				<input type="search" id="all-search" onkeyup="addClass()" placeholder="Search.." title="Type in a category">
 			</div><br>
 			<div class="c-text">
 				<div class="c-image"><img src="c1.jpg" class="img"></div>
@@ -784,6 +784,6 @@
 
 	</div>
 </section>
-
+<script type="text/javascript" src="cplus.js"></script>
 </body>
 </html>
