map, call, mail, contact form updated

--- a/cplus.html
+++ b/cplus.html
@@ -48,7 +48,9 @@
 			</div><br>
 			<div class="c-text">
 				<div class="c-image"><img src="c1.jpg" class="img"></div>
-				<!-- <div class="text"></div> -->
+
+				<div id="mainCon"><p>C++ is an Object Oriented Programming Language. One of the best ways of learning C++ is by practicing various examples of it.<br><br> This page contains examples on the basic concepts of C++.</p></div>
+				
 				<div class="content" id="allCon">
 					<p>C++ is an Object Oriented Programming Language. One of the best ways of learning C++ is by practicing various examples of it.<br><br> This page contains examples on the basic concepts of C++.</p>
 				</div>
@@ -169,6 +171,7 @@
 			<h2 style="padding: 25px 0 0 10px;" class="text-change">All Examples</h2>
 
 			<div class="prog-container">
+				<div class="error"><h1 align="center">No Result Found</h1></div>
 
 				<div class="all">
 					<ul id="myProgram" class="Searching">
