--- a/map.html
+++ b/map.html
@@ -12,11 +12,15 @@
 
 <div id="googleMap" style="width:100%;height:400px;">
   <div class="mapouter">
-    <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=acropolis institute of technology and research, manglia, indore, madhya pradesh, india.&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph APK</a></div>
+    <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=acropolis institute of technology and research, manglia, indore, madhya pradesh, india.&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/"></a></div>
     <style>
-      .mapouter{position:relative;text-align:right;width:100%;height:400px;}
-      .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}
-      .gmap_iframe {height:400px!important;}
+      .mapouter{position:relative;text-align:right;width:100%;height:800px;}
+      .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px; background: black;}
+      .gmap_iframe {height:400px;}
+      @media(max-width: 768px)
+      {
+        .gmap_iframe {height:700px!important;}
+      }
   </style>
   </div>
 </div>
