--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
       .gmap_iframe {height:400px;}
       @media(max-width: 768px)
       {
-        .gmap_iframe {height:700px!important;}
+        .gmap_iframe {height:50vh!important;}
       }
   </style>
   </div>
