--- a/map.html
+++ b/map.html
@@ -10,16 +10,16 @@
 
 <!-- use this link to generate the code= "https://www.embedmymap.com/?gclid=Cj0KCQjwl8anBhCFARIsAKbbpyT9qGLPfElmbrWvOTUwFof3NzIjMXZX-GkvWhsA_yyma_gNY_bR_bcaAshGEALw_wcB" -->
 
-<div id="googleMap" style="width:100%;height:600px;">
+<div id="googleMap" style="width:100%;height:100vh;">
   <div class="mapouter">
     <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=acropolis institute of technology and research, manglia, indore, madhya pradesh, india.&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/"></a></div>
     <style>
-      .mapouter{position:relative;text-align:right;width:100%;height:800px;}
+      .mapouter{position:relative;text-align:right;width:100%;height:100%;}
       .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px;}
-      .gmap_iframe {height:400px;}
+      .gmap_iframe {height:500px;}
       @media(max-width: 768px)
       {
-        .gmap_iframe {height:70vh!important;}
+        .gmap_iframe {height:80vh!important;}
       }
   </style>
   </div>
