spinner added in map.html

--- a/cplus.html
+++ b/cplus.html
@@ -314,45 +314,45 @@
 						</li>
 						<li><a href="cplus_prog/52starPyramid19.html"><div class="number">52</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>            &      </pre>
-							<pre>        & & &    </pre>
-							<pre>    & & & & &  </pre>
-							<pre>  & & & & & & </pre>
-							<pre>& & & & & & &</pre></span></a>
+							<pre>              &      </pre>
+							<pre>           & & &    </pre>
+							<pre>        & & & & &  </pre>
+							<pre>    & & & & & & & </pre>
+							<pre>& & & & & & & & &</pre></span></a>
 						</li>
 						<li><a href="cplus_prog/53invertedPyramid20.html"><div class="number">53</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-								<pre>& & & & & & &</pre>
-								<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre>
+								<pre>& & & & & & & & &</pre>
+								<pre>   & & & & & & & </pre>
+								<pre>       & & & & &  </pre>
+								<pre>           & & &    </pre>
+								<pre>               &      </pre>
 							</span></a></li>
 						<li><a href="cplus_prog/54diamondPat21.html"><div class="number">54</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>            &      </pre>
-							<pre>        & & &    </pre>
-							<pre>    & & & & &  </pre>
-							<pre>  & & & & & & </pre>
-							<pre>& & & & &  & &</pre>
-							<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre>
+							<pre>               &      </pre>
+							<pre>           & & &    </pre>
+							<pre>        & & & & &  </pre>
+							<pre>    & & & & & & & </pre>
+							<pre>& & & & & & & & &</pre>
+							<pre>    & & & & & & & </pre>
+								<pre>        & & & & &  </pre>
+								<pre>            & & &    </pre>
+								<pre>                &      </pre>
 						</span></a>
 						</li>
 
 						<li><a href="#"><div class="number">55</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>& & & & & & & & &</pre>
-							<pre>& & & &     & & & &</pre>
-							<pre>& & &            & & &</pre>
-							<pre>& &                   & &</pre>
-							<pre>&                          &</pre>
-							<pre>& &                   & &</pre>
-							<pre>& & &            & & &</pre>
-							<pre>& & & &     & & & &</pre>
-							<pre>& & & & & & & & &</pre>
+							<pre>&&&&&&&&&</pre>
+							<pre>&&&&  &&&&</pre>
+							<pre>&&&       &&&</pre>
+							<pre>&&            &&</pre>
+							<pre>&                 &</pre>
+							<pre>&&            &&</pre>
+							<pre>&&&       &&&</pre>
+							<pre>&&&&  &&&&</pre>
+							<pre>&&&&&&&&&</pre>
 						</span></a>
 						</li>
 						<li><a href="#"><div class="number">56</div><span>WAP to demonstrate the array.</span></a></li>
@@ -537,23 +537,24 @@
 						</li>
 						<li><a href="cplus_prog/52starPyramid19.html"><div class="number">19</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>            &      </pre>
-							<pre>        & & &    </pre>
-							<pre>    & & & & &  </pre>
-							<pre>  & & & & & & </pre>
-							<pre>& & & & & & &</pre></span></a>
+							<pre>              &      </pre>
+							<pre>           & & &    </pre>
+							<pre>        & & & & &  </pre>
+							<pre>    & & & & & & & </pre>
+							<pre>& & & & & & & & &</pre></span></a>
 						</li>
 						<li><a href="cplus_prog/54diamondPat21.html"><div class="number">21</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-							<pre>            &      </pre>
-							<pre>        & & &    </pre>
-							<pre>    & & & & &  </pre>
-							<pre>  & & & & & & </pre>
-							<pre>& & & & &  & &</pre>
-							<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre>
+							<pre>               &      </pre>
+							<pre>           & & &    </pre>
+							<pre>        & & & & &  </pre>
+							<pre>    & & & & & & & </pre>
+							<pre>& & & & & & & & &</pre>
+							<pre>    & & & & & & & </pre>
+								<pre>        & & & & &  </pre>
+								<pre>            & & &    </pre>
+								<pre>                &      </pre>
+
 						</span></a>
 						</li>
 						</ul>
@@ -615,11 +616,11 @@
 						</li>
 						<li><a href="cplus_prog/53invertedPyramid20.html"><div class="number">20</div>
 							<span style="padding-left: 10px;"><div>WAP to print pattern</div>
-								<pre>& & & & & & &</pre>
-								<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre>
+								<pre>& & & & & & & & &</pre>
+								<pre>    & & & & & & & </pre>
+								<pre>       & & & & &  </pre>
+								<pre>           & & &    </pre>
+								<pre>               &      </pre>
 							</span></a>
 						</li>
 						<li><a href="#"><div class="number">22</div>
