--- a/cplus_prog/52starPyramid19.html
+++ b/cplus_prog/52starPyramid19.html
@@ -10,10 +10,10 @@
 <div class="container">
 	<h2><div>WAP to print pattern</div><br>
 							<pre>              &      </pre>
-							<pre>         &  &  &    </pre>
-							<pre>    &  &  &  &  &  </pre>
-							<pre>  &  &  &  &  &  & </pre>
-							<pre>&  &  &  &  &  &  &</pre></span></h2><br><br>
+							<pre>           & & &    </pre>
+							<pre>        & & & & &  </pre>
+							<pre>    & & & & & & & </pre>
+							<pre>& & & & & & & & &</pre></span></h2><br><br>
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
