--- a/cplus_prog/53invertedPyramid20.html
+++ b/cplus_prog/53invertedPyramid20.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div class="container">
-	<h2><div>WAP to print pattern</div><br><pre>& & & & & & &</pre>
-								<pre>  & & & & & & </pre>
-								<pre>    & & & & &  </pre>
-								<pre>        & & &    </pre>
-								<pre>            &      </pre></h2><br><br>
+	<h2><div>WAP to print pattern</div><br><pre>& & & & & & & & &</pre>
+								<pre>   & & & & & & & </pre>
+								<pre>       & & & & &  </pre>
+								<pre>           & & &    </pre>
+								<pre>               &      </pre></h2><br><br>
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
