array programs added

--- a/cplus.html
+++ b/cplus.html
@@ -355,12 +355,12 @@
 							<pre>&&&&&&&&&</pre>
 						</span></a>
 						</li>
-						<li><a href="#"><div class="number">56</div><span>WAP to demonstrate the array.</span></a></li>
-						<li><a href="#"><div class="number">57</div><span>WAP to input number from user and display in an array.</span></a></li>
-						<li><a href="#"><div class="number">58</div><span>WAP to sum n different numbers by array (find total marks secured by students in all subjects).</span></a></li>
-						<li><a href="#"><div class="number">59</div><span>WAP to search an element in an array.</span></a></li>
-						<li><a href="#"><div class="number">60</div><span>WAP to print the largest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">61</div><span>WAP to print the smallest element of an array.</span></a></li>
+						<li><a href="cplus_prog/56arrayDemo.html"><div class="number">56</div><span>WAP to demonstrate the array.</span></a></li>
+						<li><a href="cplus_prog/57inputDisplayArray.html"><div class="number">57</div><span>WAP to input number from user and display in an array.</span></a></li>
+						<li><a href="cplus_prog/58sumArray.html"><div class="number">58</div><span>WAP to sum n different numbers by array (find total marks secured by students in all subjects).</span></a></li>
+						<li><a href="cplus_prog/59searchArray4.html"><div class="number">59</div><span>WAP to search an element in an array.</span></a></li>
+						<li><a href="cplus_prog/60largestArray5.html"><div class="number">60</div><span>WAP to print the largest element of an array.</span></a></li>
+						<li><a href="cplus_prog/61smallestArray6.html"><div class="number">61</div><span>WAP to print the smallest element of an array.</span></a></li>
 						<li><a href="#"><div class="number">62</div><span>WAP to print the second largest element of an array.</span></a></li>
 						<li><a href="#"><div class="number">63</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
 						<li><a href="#"><div class="number">64</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
@@ -655,12 +655,12 @@
 							<li>Deleting − helps in deleting the element in an array</li>
 					</div>
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the array.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to input number from user and display in an array.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to sum n different numbers by array (find total marks secured by students in all subjects).</span></a></li>
-						<li><a href="#"><div class="number">4</div><span>WAP to search an element in an array.</span></a></li>
-						<li><a href="#"><div class="number">5</div><span>WAP to print the largest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">6</div><span>WAP to print the smallest element of an array.</span></a></li>
+						<li><a href="cplus_prog/56arrayDemo.html"><div class="number">1</div><span>WAP to demonstrate the array.</span></a></li>
+						<li><a href="cplus_prog/57inputDisplayArray.html"><div class="number">2</div><span>WAP to input number from user and display in an array.</span></a></li>
+						<li><a href="cplus_prog/58sumArray.html"><div class="number">3</div><span>WAP to sum n different numbers by array (find total marks secured by students in all subjects).</span></a></li>
+						<li><a href="cplus_prog/59searchArray4.html"><div class="number">4</div><span>WAP to search an element in an array.</span></a></li>
+						<li><a href="cplus_prog/60largestArray5.html"><div class="number">5</div><span>WAP to print the largest element of an array.</span></a></li>
+						<li><a href="cplus_prog/61smallestArray6.html"><div class="number">6</div><span>WAP to print the smallest element of an array.</span></a></li>
 						<li><a href="#"><div class="number">7</div><span>WAP to print the second largest element of an array.</span></a></li>
 						<li><a href="#"><div class="number">8</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
 						<li><a href="#"><div class="number">9</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
