--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
       .spinner-border{position: absolute; top: 50%; left: 50%; transform: translate(-50% -50%); z-index: -1;}
       @media(max-width: 768px)
       {
-        .gmap_iframe {height:80vh!important;}
+        .gmap_iframe {height:80vh&apm;}
       }
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,11 +26,13 @@
 
 <div id="googleMap" style="width:100%;height:100vh;">
   <div class="mapouter">
-    <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=acropolis institute of technology and research, manglia, indore, madhya pradesh, india.&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/"></a></div>
+    <div class="gmap_canvas">
+      <div class="spinner-border text-secondary"></div>
+      <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=500&amp;hl=en&amp;q=acropolis institute of technology and research, manglia, indore, madhya pradesh, india.&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/"></a></div>
   </div>
 </div>
 
-<div class="spinner-border text-secondary"></div>
+
 
 </body>
 </html>
