--- a/map.html
+++ b/map.html
@@ -3,10 +3,11 @@
 <head>
 <title></title>
 <style>
-      .mapouter{position:relative;text-align:right;width:100%;height:100%;}
-      .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px;}
-      .gmap_iframe {height:500px;}
-      .spinner-border{position: absolute; top: 50%; left: 50%; transform: translate(-50% -50%); z-index: -1;}
+      .mapouter{text-align:right;width:100%;height:100%;}
+      .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px; }
+      .gmap_iframe {height:500px; position:relative; }
+      .spinner-border{position: absolute; top: 50%; left: 50%; z-index: -1;}
+      .gmap_iframe{}
       @media(max-width: 768px)
       {
         .gmap_iframe {height:80vh&apm;}
@@ -20,7 +21,7 @@
 
 <!-- change the value of "q" to change the location. -->
 
-<!-- OR -->
+<!-- OR --> 
 
 <!-- use this link to generate the code= "https://www.embedmymap.com/?gclid=Cj0KCQjwl8anBhCFARIsAKbbpyT9qGLPfElmbrWvOTUwFof3NzIjMXZX-GkvWhsA_yyma_gNY_bR_bcaAshGEALw_wcB" -->
 
