--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       <h1 class="proj">Get in Touch</h1>
       <div class="base1">
         <div class="conbox">
-            <a href="map.html" target="top">
+            <a href="map1.html" target="top">
               <div class="circle">
                 <i class="fa fa-map-marker"></i>
               </div>
