--- a/map1.html
+++ b/map1.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<style type="text/css">
+		body{padding: 10px;}
 		.main 
 		{
 			width: 100%;
@@ -17,6 +18,10 @@
 			top: 50%;
 			left: 50%;
 			z-index: -1;
+		}
+		@media(max-width: 768px)
+		{
+			h1{font-size: 30px;}
 		}
 	</style>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
