--- a/cplus.html
+++ b/cplus.html
@@ -361,12 +361,12 @@
 						<li><a href="cplus_prog/59searchArray4.html"><div class="number">59</div><span>WAP to search an element in an array.</span></a></li>
 						<li><a href="cplus_prog/60largestArray5.html"><div class="number">60</div><span>WAP to print the largest element of an array.</span></a></li>
 						<li><a href="cplus_prog/61smallestArray6.html"><div class="number">61</div><span>WAP to print the smallest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">62</div><span>WAP to print the second largest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">63</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
-						<li><a href="#"><div class="number">64</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
+						<li><a href="cplus_prog/62secondLargest7.html"><div class="number">62</div><span>WAP to print the second largest element of an array.</span></a></li>
+						<li><a href="cplus_prog/63addMatrix8.html"><div class="number">63</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
+						<li><a href="cplus_prog/64multMatrix9.html"><div class="number">64</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
 
-						<li><a href="#"><div class="number">65</div><span>WAP for sum of two numbers using function.</span></a></li>
-						<li><a href="#"><div class="number">66</div><span>WAP to build a calculator using functions.</span></a></li>
+						<li><a href="cplus_prog/65sumFun1.html"><div class="number">65</div><span>WAP for sum of two numbers using function.</span></a></li>
+						<li><a href="cplus_prog/66calcFun2.html"><div class="number">66</div><span>WAP to build a calculator using functions.</span></a></li>
 						<li><a href="#"><div class="number">67</div><span>WAP to find the largest element in a given array using function.</span></a></li>
 						<li><a href="#"><div class="number">68</div><span>WAP to find the factorial of a number using function.</span></a></li>
 						<li><a href="#"><div class="number">69</div><span>WAP to print Fibonacci series using function.</span></a></li>
@@ -661,16 +661,16 @@
 						<li><a href="cplus_prog/59searchArray4.html"><div class="number">4</div><span>WAP to search an element in an array.</span></a></li>
 						<li><a href="cplus_prog/60largestArray5.html"><div class="number">5</div><span>WAP to print the largest element of an array.</span></a></li>
 						<li><a href="cplus_prog/61smallestArray6.html"><div class="number">6</div><span>WAP to print the smallest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">7</div><span>WAP to print the second largest element of an array.</span></a></li>
-						<li><a href="#"><div class="number">8</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
-						<li><a href="#"><div class="number">9</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
+						<li><a href="cplus_prog/62secondLargest7.html"><div class="number">7</div><span>WAP to print the second largest element of an array.</span></a></li>
+						<li><a href="cplus_prog/63addMatrix8.html"><div class="number">8</div><span>WAP to print addition of two matrices using a multidimensional array.</span></a></li>
+						<li><a href="cplus_prog/64multMatrix9.html"><div class="number">9</div><span>WAP to print multiplication of two matrices using a multidimensional array.</span></a></li>
 					</ul>
 				</div>
 
 				<div class="func hide small-txt">
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP for sum of two numbers using function.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to build a calculator using functions.</span></a></li>
+						<li><a href="cplus_prog/65sumFun1.html"><div class="number">1</div><span>WAP for sum of two numbers using function.</span></a></li>
+						<li><a href="cplus_prog/66calcFun2.html"><div class="number">2</div><span>WAP to build a calculator using functions.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to find the largest element in a given array using function.</span></a></li>
 						<li><a href="#"><div class="number">4</div><span>WAP to find the factorial of a number using function.</span></a></li>
 						<li><a href="#"><div class="number">5</div><span>WAP to print Fibonacci series using function.</span></a></li>
