--- a/map1.html
+++ b/map1.html
@@ -27,6 +27,13 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+	<!-- change the value of "q" to change the location. -->
+
+	<!-- OR --> 
+
+	<!-- use this link to generate the code= "https://www.embedmymap.com/?gclid=Cj0KCQjwl8anBhCFARIsAKbbpyT9qGLPfElmbrWvOTUwFof3NzIjMXZX-GkvWhsA_yyma_gNY_bR_bcaAshGEALw_wcB" -->
+
 	<h1>Acropolis Institute of Technology & Research, Indore</h1>
 	<div class="main">
 		<div class="spinner-border text-secondary center"></div>
